--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -5,14 +5,14 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
-		<servlet-name>Vonline_be</servlet-name>
-		<servlet-class>com.vmesteonline.be.Vonline_beServlet</servlet-class>
+		<servlet-name>AuthSericeServlet</servlet-name>
+		<servlet-class>com.vmesteonline.be.AuthSericeServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Vonline_be</servlet-name>
-		<url-pattern>/vonline_be</url-pattern>
+		<servlet-name>AuthSericeServlet</servlet-name>
+		<url-pattern>/thrift/AuthService</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>login.html</welcome-file>
 	</welcome-file-list>
 </web-app>
