--- a/vonline_be/.classpath
+++ b/vonline_be/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="thrift/gen-java"/>
+	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/apache-thrift/libthrift-0.9.1.jar"/>
@@ -16,5 +17,9 @@
 	<classpathentry kind="lib" path="lib/apache-thrift/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/apache-thrift/lib/slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.28-bin.jar"/>
+	<classpathentry kind="lib" path="C:/local/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.8/appengine-java-sdk-1.8.8/lib/testing/appengine-testing.jar"/>
+	<classpathentry kind="lib" path="C:/local/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.8/appengine-java-sdk-1.8.8/lib/impl/appengine-api.jar"/>
+	<classpathentry kind="lib" path="C:/local/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.8/appengine-java-sdk-1.8.8/lib/impl/appengine-api-labs.jar"/>
+	<classpathentry kind="lib" path="C:/local/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.8/appengine-java-sdk-1.8.8/lib/impl/appengine-api-stubs.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
