--- a/vonline_be/src/log4j.properties
+++ b/vonline_be/src/log4j.properties
@@ -4,6 +4,13 @@
 # directory.  You are also encouraged to edit it as you like.
 
 # Configure the console as our one appender
+
+log4j.rootLogger = INFO, stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%L) - %m%n
+
+
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
