add http session stub for tests add datastore tests helper

--- a/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
+++ b/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
@@ -5,3 +5,4 @@ gaeHrdEnabled=true
 googleCloudSqlEnabled=false
 localDevMySqlEnabled=true
 ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/
+validationExclusions=src/com/vmesteonline/be/jdo2/VoUser.java
