--- a/vonline_be/src/log4j.properties
+++ b/vonline_be/src/log4j.properties
@@ -5,7 +5,7 @@
 
 # Configure the console as our one appender
 
-log4j.rootLogger = INFO, stdout
+log4j.rootLogger = DEBUG, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%L) - %m%n
