--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -12,6 +12,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>AuthSericeServlet</servlet-name>
 		<url-pattern>/thrift/AuthService</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>MessageServiceServlet</servlet-name>
+		<servlet-class>com.vmesteonline.be.MessageServiceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MessageServiceServlet</servlet-name>
+		<url-pattern>/thrift/MessageService</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>login.html</welcome-file>
 	</welcome-file-list>
