rename user service

--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -14,7 +14,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>UserServiceServlet</servlet-name>
-		<servlet-class>com.vmesteonline.be.UserSericeServlet</servlet-class>
+		<servlet-class>com.vmesteonline.be.UserServiceServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>UserServiceServlet</servlet-name>
