--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -29,6 +29,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/thrift/MessageService</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>login.html</welcome-file>
+		<welcome-file>main.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
