--- a/vonline_be/.settings/.gitignore
+++ b/vonline_be/.settings/.gitignore
@@ -1,2 +1,6 @@
 /org.eclipse.core.resources.prefs
 /org.eclipse.core.runtime.prefs
+com.google.appengine.eclipse.core.prefs
+com.google.gdt.eclipse.core.prefs
+org.eclipse.jdt.core.prefs
+org.eclipse.wst.common.project.facet.core.xml
