--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -34,7 +34,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ShopServiceServlet</servlet-name>
-		<url-pattern>/thrift/shop</url-pattern>
+		<url-pattern>/thrift/ShopService</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>main.jsp</welcome-file>
