--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -36,6 +36,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>ShopServiceServlet</servlet-name>
 		<url-pattern>/thrift/shop</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>FileAccess</servlet-name>
+		<servlet-class>com.vmesteonline.be.VoFileAccess</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FileAccess</servlet-name>
+		<url-pattern>/file/*</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>main.jsp</welcome-file>
 	</welcome-file-list>
