test get topics

--- a/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
+++ b/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
@@ -4,5 +4,12 @@ gaeDatanucleusVersion=v2
 gaeHrdEnabled=true
 googleCloudSqlEnabled=false
 localDevMySqlEnabled=true
+mySqlDatabaseName=vonline
+mySqlDatabasePassword=
+mySqlDatabaseUser=vonline
+mySqlHostName=localhost
+mySqlIsConfigured=true
+mySqlJdbcJar=C\:\\Users\\trifid\\git\\vmesteonline\\vonline_be\\lib\\mysql-connector-java-5.1.28-bin.jar
+mySqlPort=3306
 ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/
 validationExclusions=src/com/vmesteonline/be/jdo2/VoUser.java
