--- a/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
+++ b/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,11 +1,14 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=d5aafda1c47800f7045b514926ddc76fee473f90
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.8.8.jar|appengine-api-labs.jar|appengine-endpoints-deps.jar|appengine-endpoints.jar|appengine-jsr107cache-1.8.8.jar|asm-4.0.jar|datanucleus-api-jdo-3.1.3.jar|datanucleus-api-jpa-3.1.3.jar|datanucleus-appengine-2.1.2.jar|datanucleus-core-3.1.3.jar|geronimo-jpa_2.0_spec-1.0.jar|jdo-api-3.0.1.jar|jsr107cache-1.1.jar|jta-1.1.jar
+filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.8.9.jar|appengine-api-labs.jar|appengine-endpoints-deps.jar|appengine-endpoints.jar|appengine-jsr107cache-1.8.9.jar|asm-4.0.jar|datanucleus-api-jdo-3.1.3.jar|datanucleus-api-jpa-3.1.3.jar|datanucleus-appengine-2.1.2.jar|datanucleus-core-3.1.3.jar|geronimo-jpa_2.0_spec-1.0.jar|jdo-api-3.0.1.jar|jsr107cache-1.1.jar|jta-1.1.jar
 gaeDatanucleusVersion=v2
 gaeDeployDialogSettings=
 gaeHrdEnabled=true
-<<<<<<< HEAD
-googleCloudSqlEnabled=false
-localDevMySqlEnabled=true
+gaeLaunchAppInBrowser=true
+googleCloudSqlEnabled=true
+localDevMySqlEnabled=false
 mySqlDatabaseName=vonline
 mySqlDatabasePassword=
 mySqlDatabaseUser=vonline
@@ -13,11 +16,6 @@ mySqlHostName=localhost
 mySqlIsConfigured=true
 mySqlJdbcJar=C\:\\Users\\trifid\\git\\vmesteonline\\vonline_be\\lib\\mysql-connector-java-5.1.28-bin.jar
 mySqlPort=3306
-=======
-gaeLaunchAppInBrowser=true
-googleCloudSqlEnabled=true
-localDevMySqlEnabled=false
->>>>>>> d5aafda1c47800f7045b514926ddc76fee473f90
 ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/
 prodDatabaseName=vonline
 prodDatabasePassword=
