--- a/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
+++ b/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,7 +1,5 @@
 eclipse.preferences.version=1
-
 filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.9.3.jar|appengine-api-labs.jar|appengine-endpoints-deps.jar|appengine-endpoints.jar|appengine-jsr107cache-1.9.3.jar|asm-4.0.jar|datanucleus-api-jdo-3.1.3.jar|datanucleus-api-jpa-3.1.3.jar|datanucleus-appengine-2.1.2.jar|datanucleus-core-3.1.3.jar|geronimo-jpa_2.0_spec-1.0.jar|jdo-api-3.0.1.jar|jsr107cache-1.1.jar|jta-1.1.jar
-
 gaeDatanucleusVersion=v2
 gaeDeployDialogSettings=
 gaeHrdEnabled=true
@@ -15,7 +13,7 @@ mySqlHostName=localhost
 mySqlIsConfigured=true
 mySqlJdbcJar=C\:\\Users\\trifid\\git\\vmesteonline\\vonline_be\\lib\\mysql-connector-java-5.1.28-bin.jar
 mySqlPort=3306
-ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/
+ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/|src/com/vmesteonline/be/access/
 prodDatabaseName=vonline
 prodDatabasePassword=
 prodDatabaseUser=vonline
