--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -36,6 +36,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>ShopServiceServlet</servlet-name>
 		<url-pattern>/thrift/ShopService</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ShopServiceServlet</servlet-name>
+		<url-pattern>/thrift/ShopBOService</url-pattern>
+	</servlet-mapping>
 	<servlet>
 		<servlet-name>FileAccess</servlet-name>
 		<servlet-class>com.vmesteonline.be.VoFileAccess</servlet-class>
