--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -48,6 +48,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>FileAccess</servlet-name>
 		<url-pattern>/file/*</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ShopMain</servlet-name>
+		<jsp-file>/shop.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ShopMain</servlet-name>
+		<url-pattern>/market/*</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>main.jsp</welcome-file>
 	</welcome-file-list>
