--- a/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
+++ b/vonline_be/.settings/com.google.appengine.eclipse.core.prefs
@@ -8,20 +8,14 @@ googleCloudSqlEnabled=true
 localDevMySqlEnabled=true
 mySqlDatabaseName=vonline
 mySqlDatabasePassword=
-mySqlDatabaseUser=vonline
+mySqlDatabaseUser=root
 mySqlHostName=localhost
 mySqlIsConfigured=true
-mySqlJdbcJar=C\:\\Users\\trifid\\git\\vmesteonline\\vonline_be\\lib\\mysql-connector-java-5.1.28-bin.jar
+mySqlJdbcJar=C\:\\work\\git_local\\vmesteonline_test\\vonline_be\\lib\\mysql-connector-java-5.1.28-bin.jar
 mySqlPort=3306
-ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|tests/tagcloud/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/|src/com/vmesteonline/be/access/
+ormEnhancementInclusions=src/com/vmesteonline/be/jdo2/|src/com/vmesteonline/be/jdo2/postaladdress/|src/com/vmesteonline/be/jdo2/shop/|src/com/vmesteonline/be/jdo2/shop/exchange/|src/com/vmesteonline/be/access/
 prodDatabaseName=vonline
 prodDatabasePassword=
 prodDatabaseUser=vonline
 prodInstanceName=vmesteonline\:sqldb
 prodIsConfigured=true
-testDatabaseName=vonline
-testDatabasePassword=vonline
-testDatabaseUser=vonline
-testInstanceName=vmesteonline\:sqldb
-testIsConfigured=true
-validationExclusions=
