--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -66,6 +66,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>main.jsp</welcome-file>
+		<welcome-file>shop.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
