--- a/vonline_be/war/WEB-INF/logging.properties
+++ b/vonline_be/war/WEB-INF/logging.properties
@@ -11,4 +11,4 @@
 
 # Set the default logging level for all loggers to WARNING
 .level = INFO
-com.vmesteonline.level = DEBUG
+com.vmesteonline.be.level = FINEST
