rename Utils to Utilites to avoid name conflict under Windows

--- a/vonline_be/.gitignore
+++ b/vonline_be/.gitignore
@@ -1,18 +1,8 @@
 /.google_apis
-/
-.settings
-/
-.classpath
-/
-.project
-
-/bin
-<<<<<<< HEAD
-
-vonline_be.iml
+/.settings
+/.classpath
+/.project
 /WEB-INF
-.externalToolBuilders/
-=======
+/bin
 /.project
 .externalToolBuilders/
->>>>>>> master
