--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -64,6 +64,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>ShopMain</servlet-name>
 		<url-pattern>/market/*</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>FileService</servlet-name>
+		<servlet-class>com.vmesteonline.be.FileServiceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FileService</servlet-name>
+		<url-pattern>/thrift/fs</url-pattern>
+	</servlet-mapping>
+	
 	
 	<welcome-file-list>
 		<welcome-file>shop.jsp</welcome-file>
