--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -73,9 +73,29 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>FileService</servlet-name>
 		<url-pattern>/thrift/fs</url-pattern>
 	</servlet-mapping>
-	
+
+    <servlet>
+        <servlet-name>shop</servlet-name>
+        <jsp-file>shop.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>shop</servlet-name>
+        <url-pattern>/shop/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>about-shop</servlet-name>
+        <jsp-file>about-shop.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>about-shop</servlet-name>
+        <url-pattern>/about-shop/*</url-pattern>
+    </servlet-mapping>
+
 	
 	<welcome-file-list>
-		<welcome-file>shop.jsp</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
