--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -103,9 +103,30 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <servlet-name>backoffice</servlet-name>
         <url-pattern>/backoffice/*</url-pattern>
     </servlet-mapping>
-
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<filter>
+        <filter-name>shopDetector</filter-name>
+        <filter-class>com.vmesteonline.be.Main</filter-class>
+        <init-param>
+            <param-name>landingURL</param-name>
+            <param-value>voclub.co</param-value>
+        </init-param>
+        <init-param>
+            <param-name>localPostfix</param-name>
+            <param-value>.local</param-value>
+        </init-param>
+    </filter>
+    
+	<filter-mapping>
+        <filter-name>shopDetector</filter-name>
+        <url-pattern>/backoffice/*</url-pattern>
+        <url-pattern>/shop/*</url-pattern>
+        <url-pattern>/about/*</url-pattern>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+		
 </web-app>
