--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -128,5 +128,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <url-pattern>/about/*</url-pattern>
         <url-pattern>/</url-pattern>
     </filter-mapping>
+    
+	<servlet>
+		<servlet-name>UpdateSomething</servlet-name>
+		<servlet-class>com.vmesteonline.be.utils.UpdateSomething</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpdateSomething</servlet-name>
+		<url-pattern>/utils/doupdate</url-pattern>
+	</servlet-mapping>
 		
 </web-app>
