--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -57,15 +57,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 
 	<servlet>
-		<servlet-name>ShopMain</servlet-name>
-		<jsp-file>/shop.jsp</jsp-file>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ShopMain</servlet-name>
-		<url-pattern>/market/*</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
 		<servlet-name>FileService</servlet-name>
 		<servlet-class>com.vmesteonline.be.FileServiceServlet</servlet-class>
 	</servlet>
@@ -74,9 +65,20 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/thrift/fs</url-pattern>
 	</servlet-mapping>
 
+    <!-- servlet>
+        <servlet-name>enter</servlet-name>
+        <jsp-file>/index.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>enter</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping -->
+    
+	
     <servlet>
         <servlet-name>about</servlet-name>
-        <jsp-file>about-shop.jsp</jsp-file>
+        <jsp-file>/about-shop.jsp</jsp-file>
     </servlet>
 
     <servlet-mapping>
@@ -86,7 +88,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
     <servlet>
         <servlet-name>shop</servlet-name>
-        <jsp-file>shop.jsp</jsp-file>
+        <jsp-file>/shop.jsp</jsp-file>
     </servlet>
 
     <servlet-mapping>
@@ -96,17 +98,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
     <servlet>
         <servlet-name>backoffice</servlet-name>
-        <jsp-file>backoffice.jsp</jsp-file>
+        <jsp-file>/backoffice.jsp</jsp-file>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>backoffice</servlet-name>
         <url-pattern>/backoffice/*</url-pattern>
     </servlet-mapping>
-	
-	<welcome-file-list>
+    
+    <welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<error-page>
+        <error-code>500</error-code>
+        <location>/errors/servererror.jsp</location>
+    </error-page>
 	
 	<filter>
         <filter-name>shopDetector</filter-name>
@@ -126,7 +133,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
         <url-pattern>/backoffice/*</url-pattern>
         <url-pattern>/shop/*</url-pattern>
         <url-pattern>/about/*</url-pattern>
-        <url-pattern>/</url-pattern>
     </filter-mapping>
     
 	<servlet>
