--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -155,6 +155,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/backoffice/*</url-pattern>
 		<url-pattern>/shop/*</url-pattern>
 		<url-pattern>/about/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</filter-mapping>
 
 	<servlet>
