--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -158,7 +158,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/</url-pattern>
 	</filter-mapping>
 	
-	<filter>
+	<!-- filter>
 		<filter-name>crossAuth</filter-name>
 		<filter-class>com.vmesteonline.be.CrossAuthFilter</filter-class>
 	</filter>
@@ -166,7 +166,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<filter-name>crossAuth</filter-name>
 		<url-pattern>/shop/*</url-pattern>
 		<url-pattern>/</url-pattern>
-	</filter-mapping>
+	</filter-mapping -->
 	
 
 	<servlet>
