--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -74,6 +74,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>ShopMain</servlet-name>
 		<url-pattern>/market/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Main</servlet-name>
+		<jsp-file>/main.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Main</servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>FileService</servlet-name>
