--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -78,12 +78,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	</servlet-mapping>
 
 	<servlet>
-		<servlet-name>ShopMain</servlet-name>
-		<jsp-file>/shop.jsp</jsp-file>
+		<servlet-name>Init</servlet-name>
+		<jsp-file>/init.jsp</jsp-file>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>ShopMain</servlet-name>
-		<url-pattern>/market/*</url-pattern>
+		<servlet-name>Init</servlet-name>
+		<url-pattern>/init</url-pattern>
 	</servlet-mapping>
 	
 	<servlet>
@@ -99,10 +99,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>FileService</servlet-name>
 		<servlet-class>com.vmesteonline.be.FileServiceServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>FileService</servlet-name>
-		<url-pattern>/thrift/fs</url-pattern>
-	</servlet-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>main.jsp</welcome-file>
