--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -67,14 +67,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/init</url-pattern>
 	</servlet-mapping>
 
-    <servlet>
+    <!-- servlet>
         <servlet-name>Index</servlet-name>
         <jsp-file>/index.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>Index</servlet-name>
         <url-pattern>/index.jsp</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping -->
 
     <servlet>
         <servlet-name>Backoffice</servlet-name>
@@ -105,7 +105,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 
     <servlet>
         <servlet-name>About</servlet-name>
-        <jsp-file>/about.html</jsp-file>
+        <jsp-file>/about.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>About</servlet-name>
