--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -133,4 +133,24 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     <welcome-file-list>
         <welcome-file>main.jsp</welcome-file>
     </welcome-file-list>
+    
+    
+    <servlet>
+		<servlet-name>Notification</servlet-name>
+		<servlet-class>com.vmesteonline.be.NotificationServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Notification</servlet-name>
+		<url-pattern>/tasks/notification</url-pattern>
+	</servlet-mapping>
+	
+    <security-constraint>
+	    <web-resource-collection>
+	        <web-resource-name>tasks</web-resource-name>
+	        <url-pattern>/tasks/*</url-pattern>
+	    </web-resource-collection>
+	    <auth-constraint>
+	        <role-name>admin</role-name>
+	    </auth-constraint>
+	</security-constraint>
 </web-app>
