--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -129,6 +129,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>FileService</servlet-name>
 		<url-pattern>/thrift/fs</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ConfirmEmailServlet</servlet-name>
+		<servlet-class>com.vmesteonline.be.ConfirmEmailServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConfirmEmailServlet</servlet-name>
+		<url-pattern>/confirm/*</url-pattern>
+	</servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>main.jsp</welcome-file>
