--- a/vonline_be/src/log4j.properties
+++ b/vonline_be/src/log4j.properties
@@ -23,6 +23,6 @@ log4j.category.DataNucleus.ValueGeneration=WARN, A1
 log4j.category.DataNucleus.Enhancer=WARN, A1
 log4j.category.DataNucleus.SchemaTool=WARN, A1
 
-log4j.logger.com.vmesteonline=ALL
-log4j.logger.com.mysql=ALL
+log4j.logger.com.vmesteonline=ALL, A1
+log4j.logger.com.mysql=ALL, A1
 
