--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -162,4 +162,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	        <role-name>admin</role-name>
 	    </auth-constraint>
 	</security-constraint>
+	
+    
+    <servlet>
+		<servlet-name>doUpdate</servlet-name>
+		<servlet-class>com.vmesteonline.be.UPDATEServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>doUpdate</servlet-name>
+		<url-pattern>/update/doupdate</url-pattern>
+	</servlet-mapping>
+    
 </web-app>
