--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -135,6 +135,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<location>/errors/servererror.jsp</location>
 	</error-page>
 
+	PersistenceInitFilter
+	
+	<filter>
+		<filter-name>persistenceMananagerInit</filter-name>
+		<filter-class>com.vmesteonline.be.PersistenceInitFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>persistenceMananagerInit</filter-name>
+		<url-pattern>/file/*</url-pattern>
+		<url-pattern>/thrift/*</url-pattern>
+		<url-pattern>/backoffice/*</url-pattern>
+		<url-pattern>/shop/*</url-pattern>
+		<url-pattern>/about/*</url-pattern>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
+	
 	<filter>
 		<filter-name>shopDetector</filter-name>
 		<filter-class>com.vmesteonline.be.Main</filter-class>
