new notification fix

--- a/vonline_be/war/WEB-INF/logging.properties
+++ b/vonline_be/war/WEB-INF/logging.properties
@@ -10,5 +10,6 @@
 #
 
 # Set the default logging level for all loggers to WARNING
-.level = INFO
-com.vmesteonline.be.level = FINEST
+.level = INFO 
+com.vmesteonline.level = FINEST
+com.vmesteonline.be.notifications.level = FINEST
