--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -183,5 +183,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>getCodes</servlet-name>
 		<url-pattern>/update/getCodes</url-pattern>
 	</servlet-mapping>
+	
+	<filter>
+		<filter-name>persistenceMananagerInit</filter-name>
+		<filter-class>com.vmesteonline.be.PersistenceInitFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>persistenceMananagerInit</filter-name>
+		<url-pattern>/file/*</url-pattern>
+		<url-pattern>/thrift/*</url-pattern>
+		<url-pattern>/about/*</url-pattern>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
+	
 
 </web-app>
