--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -185,6 +185,24 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	</servlet-mapping>
 	
 	<filter>
+        <filter-name>ObjectifyFilter</filter-name>
+        <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+	</filter>
+	<filter-mapping>
+        <filter-name>ObjectifyFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<servlet>
+		<servlet-name>testOfy</servlet-name>
+		<servlet-class>com.vmesteonline.be.TestPerformanceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>testOfy</servlet-name>
+		<url-pattern>/JDOvsOFY</url-pattern>
+	</servlet-mapping>
+	
+	<filter>
 		<filter-name>persistenceMananagerInit</filter-name>
 		<filter-class>com.vmesteonline.be.PersistenceInitFilter</filter-class>
 	</filter>
