--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -30,6 +30,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>UserServiceServlet</servlet-name>
 		<url-pattern>/thrift/UserService</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>UtilityServiceServlet</servlet-name>
+		<servlet-class>com.vmesteonline.be.UtilityServicesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UtilityServiceServlet</servlet-name>
+		<url-pattern>/thrift/UtilityService</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>MessageServiceServlet</servlet-name>
