--- a/vonline_be/war/WEB-INF/web.xml
+++ b/vonline_be/war/WEB-INF/web.xml
@@ -16,7 +16,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	
     <servlet>
 		<servlet-name>ExportServlet</servlet-name>
-		<servlet-class>com.vmesteonline.be.utils.ExportServlet</servlet-class>
+		<servlet-class>com.vmesteonline.be.utils.ExportCSVServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ExportServlet</servlet-name>
